--- a/app/src/main/res/layout-land/activity_1.xml
+++ b/app/src/main/res/layout-land/activity_1.xml
@@ -10,32 +10,27 @@
         android:id="@+id/Header1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="131dp"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="131dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginStart="97dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="16dp"
         android:text="Triviatime!"
         android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.416"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="105dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="106dp"
-        android:layout_marginBottom="20dp"
         android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/gridLayout1"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/knowledge" />
 
     <Button
@@ -43,35 +38,40 @@
         style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="87dp"
+        android:layout_marginBottom="63dp"
         android:text="Play"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/gridLayout1" />
+        app:layout_constraintStart_toEndOf="@+id/gridLayout1"
+        app:layout_constraintTop_toBottomOf="@+id/textView1" />
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="310dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="21dp"
-        android:layout_marginBottom="21dp"
+        android:layout_width="184dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="30dp"
         android:text="A higher difficulty result in more points per correct answer."
-        app:layout_constraintBottom_toTopOf="@+id/imageView1"
+        app:layout_constraintBottom_toTopOf="@+id/Button1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView1"
         app:layout_constraintTop_toBottomOf="@+id/Header1" />
 
     <android.support.v7.widget.GridLayout
         android:id="@+id/gridLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="43dp"
         app:columnCount="1"
-        app:layout_constraintBottom_toTopOf="@+id/Button1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.146"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView1"
         app:rowCount="6">
