--- a/app/src/main/res/layout-land/activity_2.xml
+++ b/app/src/main/res/layout-land/activity_2.xml
@@ -10,14 +10,15 @@
         android:id="@+id/Question2"
         android:layout_width="320dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="202dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="161dp"
         android:layout_marginBottom="20dp"
         android:text="Question"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/GridLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,9 +31,10 @@
         app:columnCount="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Question2">
+        app:layout_constraintTop_toBottomOf="@+id/Question2"
+        app:layout_constraintVertical_bias="0.0">
 
         <Button
             android:id="@+id/Answer1"
@@ -71,14 +73,14 @@
         android:id="@+id/Score2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="306dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="46dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginStart="54dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="276dp"
         android:text="Score: 0"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/Question2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Question2"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
